--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Internet to Caspar",
-  "version": "1.0.1",
-
-  "action": {},
-  "default_locale": "en",
-  "description": "A plain text description",
-  "icons": {},
-
-  "author": "developer@example.com",  
-  
-  "background": {},
-  "chrome_settings_overrides": {},
-  "chrome_url_overrides": {},
-  "commands": {},
-  "content_scripts": [{}],
-  "content_security_policy": {},
-  "cross_origin_embedder_policy": {},
-  "cross_origin_opener_policy": {},
-  "declarative_net_request": {},
-  "devtools_page": "devtools.html",
-  "event_rules": [{}],
-  "export": {},
-  "externally_connectable": {},
-  "file_browser_handlers": [],
-  "file_system_provider_capabilities": {},
-  "homepage_url": "https://path/to/homepage",
-  "host_permissions": [],
-  "import": [{}],
-  "incognito": "spanning, split, or not_allowed",
-  "input_components": [{}],
-  "key": "publicKey",
-  "minimum_chrome_version": "107",
-  "oauth2": {},
-  "omnibox": {},
-  "optional_host_permissions": [""],
-  "optional_permissions": [""],
-  "options_page": "options.html",
-  "options_ui": {},
-  "permissions": [""],
-  "requirements": {},
-  "sandbox": {},
-  "short_name": "Short Name",
-  "side_panel": {},
-  "storage": {},
-  "tts_engine": {},
-  "update_url": "https://path/to/updateInfo.xml",
-  "version_name": "1.0 beta",
-  "web_accessible_resources": []
+  "version": "0.2",
+  "description": "Right click to send image to Caspar",
+  "icons": {
+    "16": "./assets/casparcg [16x16].png",
+    "32": "./assets/casparcg [32x32].png",
+    "64": "./assets/casparcg [64x64].png",
+    "280": "./assets/casparcg.png"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": ["contextMenus"]
 }
