--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,12 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["contextMenus"]
+  "permissions": ["contextMenus"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_end"
+    }
+  ]
 }
