--- a/Oracle_Chrome_Extension/manifest.json
+++ b/Oracle_Chrome_Extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Internet to Caspar",
+  "name": "Internet to Oracle",
   "version": "0.3",
   "description": "Right click to send image to Caspar",
   "icons": {
@@ -8,6 +8,9 @@
     "32": "./assets/casparcg [32x32].png",
     "64": "./assets/casparcg [64x64].png",
     "280": "./assets/casparcg.png"
+  },
+  "browser_action": {
+    "default_icon": "./assets/casparcg.png"
   },
   "background": {
     "service_worker": "background.js"
